# UpliftBench

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
blog/: post.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DATA.md  ESTIMATORS.md  EVALUATION.md  PHASE6_REPRO_AUDIT.md  REFUTATION.md
notebooks/: 01_eda.ipynb  02_s_t_learners.ipynb  03_x_dr_dml.ipynb  04_dowhy_refutation.ipynb  05_comparison.ipynb  kaggle_end_to_end.ipynb
scripts/: download_data.py  evaluate_all.py  prepare_data.py  run_dowhy.py  score_sample.py  train.py
src/upliftbench/: __init__.py  config.py  features.py  persistence.py  plotting.py  segmentation.py
src/upliftbench/data/: __init__.py  loader.py  prepare.py
src/upliftbench/estimators/: __init__.py  base.py  dml.py  dr_learner.py  s_learner.py  t_learner.py  x_learner.py
src/upliftbench/eval/: __init__.py  auuc.py  harness.py  qini.py  topk.py
src/upliftbench/refute/: __init__.py  dowhy_pipeline.py
streamlit_app/: app.py
tests/: test_dowhy_pipeline.py  test_import.py  test_persistence.py  test_segmentation.py
tests/data/: test_loader.py  test_prepare.py
tests/estimators/: test_s_t_learners.py  test_x_dr_dml.py
tests/eval/: test_auuc.py  test_qini.py
