[project]
name = "upliftbench"
version = "0.1.0"
description = "Causal-inference uplift benchmark on Criteo Uplift v2 (DoWhy + CausalML + EconML)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "UpliftBench" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1,<3.0",
    "pyarrow>=15.0",
    "scikit-learn>=1.3,<1.5",
    "lightgbm>=4.1,<5.0",
    "scipy>=1.11",
    "joblib>=1.3",
    "typer>=0.12",
    "tqdm>=4.66",
    "matplotlib>=3.8",
    "requests>=2.31",
    "dowhy>=0.11,<0.13",
    "causalml>=0.15",
    "econml>=0.15",
    # DoWhy 0.12 still uses nx.algorithms.d_separated which was removed in networkx 3.3.
    "networkx>=2.8,<3.3",
]

[project.optional-dependencies]
# Slim extra for Streamlit Community Cloud. Must NOT pull in causalml/dowhy/econml/lightgbm.
streamlit = [
    "streamlit>=1.32",
    "pandas>=2.1,<3.0",
    "pyarrow>=15.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "psutil>=5.9",
    "types-requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/upliftbench"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
exclude = ["tests/", "notebooks/", "build/"]
